tests/checker/good/libchain1.scilla
scilla_version 0

import TestLib1

library LibChain1

let foo = sort_uint32

contract TestContr1
()
