tests/checker/bad/bad_adt_lib_6.scilla
scilla_version 0

import BadADTLib3a

(***************************************************)
(*               Associated library                *)
(***************************************************)
library BadLib

type MyTestType1 =
| Item3


contract BadLib ()
